--- a/src/app/components/Testimonial/Testimonial.scss
+++ b/src/app/components/Testimonial/Testimonial.scss
@@ -1,21 +1,9 @@
 .testimonials {
   margin-top: 1rem;
   width: 100%;
-  overflow: hidden;
-
-  [class^='number-slide'],
-  [class*=' number-slide'] {
-    background: grey;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    font-size: 50px;
-    color: #fff;
-    font-weight: 500;
-    height: 300px;
-    max-height: 100vh;
-  }
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
 
   h3 {
     @media (max-width: $tablet-breakpoint) {
@@ -31,16 +19,19 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 33.33%;
+    width: 33%;
     height: 100%;
-    background-color: yellow;
+    background-color: $secondary-yellow;
     z-index: 1;
   }
 
   .slider-wrapper {
     position: relative;
     width: 100%;
-    border: 1px solid gray;
+    border: 1px solid #bababa;
+    overflow-y: hidden;
+    height: 100%;
+    overflow-y: hidden;
 
     ul {
       padding-left: 0;
@@ -48,31 +39,41 @@
       position: relative;
       z-index: 2;
 
-      &::before {
-        content: '';
-        display: block;
-        width: 50px;
-        height: 100%;
-        background-color: white;
-        background: linear-gradient(to right, white, transparent);
-        position: absolute;
-        left: 0;
-        z-index: 3;
-      }
+      height: 100%;
+      max-height: 100%;
+      min-height: 100%;
 
+      &::before,
       &::after {
         content: '';
         display: block;
-        width: 50px;
+        width: 100px;
         height: 100%;
         background-color: white;
-        background: linear-gradient(to left, white, transparent);
         position: absolute;
-        right: 0;
         z-index: 3;
       }
 
+      &::before {
+        left: 0;
+        background: linear-gradient(to right, white, transparent);
+      }
+
+      &::after {
+        right: 0;
+        background: linear-gradient(to left, white, transparent);
+      }
+
       li {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+        min-height: 100%;
+        // overflow-y: scroll !important;
+        max-height: 100%;
+
         .reviewer {
           text-align: right;
         }
